--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,24 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="index.css">
+    <title>Document</title>
+</head>
+<body>
+    <section>
+        <div class="top">
+        <div id="purp"></div>
+        <div id="green"></div>
+        <div id="blue"></div>
+        </div>
+    </section>
+    <section class="middle">
+        <div></div>
+    </section>
+    <section class="bottom">
+        <div id="box">
+            <h1>HELLO            FRIENDS</h1>
+        </div>
+    </section>
+</body>
+</html>
