--- a/second/index.html
+++ b/second/index.html
@@ -13,11 +13,15 @@
         </div>
     </section>
     <section class="middle">
-        <div></div>
+        <div class="dots">
+            <div id="yellow"></div>
+        </div>
     </section>
     <section class="bottom">
         <div id="box">
-            <h1>HELLO            FRIENDS</h1>
+            <div id="words">
+            <h1>HELLO</h1><h1>FRIENDS</h1>
+            </div>
         </div>
     </section>
 </body>
